== 版本说明

=== 1.1.0-RC

==== Feature

* [功能] 支持服务调用（ `Hystrix` ）异常邮件通知
* [功能] 适配新版 `用户权限中心` SDK

==== Improvement

* [优化] 统一响应——协议无关 类型的http返回码由统一的200改成 `200` 或 `1000` ，前则表示操作成功或不需要降级的错误，后则表示需要做降级（Hystrix fallback）的错误
* [优化] `Dew JDBC` 更好地支持没有 `Entity` 注解的对象

==== Fixed

==== 从 `1.1.0-beta1` 迁移到 `1.1.0-RC`
. 使用 `统一响应——协议无关` 类型时，UI端由原来只需要获取200状态下的数据改成需要获取 200 和 1000 状态下的数据，两者对UI端没有区别。( @See https://rep.360taihe.com/csp/dew-framework/issues/53 )

=== 1.1.0-beta1

==== Feature

* [功能]支持局部 `ShardingJDBC`(由于ShardingJDBC 2.0还未RC，测试发现存在较多问题，此功能需要等待官方RC)

==== Improvement

* [优化]支持Java8时间处理
* [优化]模块Spring化，`boot-core` 更名为 `boot-starter` , `cloud-core` 更名为 `cloud-starter`
* [优化] `Dew JDBC` 独立成 `jdbc-starter` , 确保核心模块 `boot-starter` 更轻量
* [优化] `Dew JDBC` 性能优化
* [文档]添加性能调优章节

==== Fixed

* [修正]统一错误拦截返回指定为 `MediaType=APPLICATION_JSON_UTF8` 以解决 `Feign` 调用解码错误

==== 从 `1.0.0-RC/betaX` 迁移到 `1.1.0`

`1.1.0` 修正了 `1.0.0` 版本的几个设计缺陷，需要做如下的迁移操作：

* Maven: `Dew` 框架的版本修正成 `1.1.0-X`，目前是 `1.1.0-beta1`
* Maven: `boot-core` 更名为 `boot-starter` , `cloud-core` 更名为 `cloud-starter`
* 核心代码: `com.tairanchina.csp.dew.core.Dew` 包路径改成 `com.tairanchina.csp.dew.Dew`
* `Dew JDBC` 模块（使用MyBatis等其它持久化框架的项目可以忽略）
**  `SafeEntity` 的创建/更新时间 由 `Date` 换成了 `LocalDateTime`
**  所有 `entity` 包 迁移到 `com.tairanchina.csp.dew.jdbc.entity`
**  使用 `JdbcTemplate` 原生方法时 原来是： `Dew.ds().jdbc.xx` ，需要修改成 `((DewDS)Dew.ds).jdbc.xx`

=== 1.0.0-RC

==== Feature

* [功能]支持新版用户权限中心认证适配(* 新版用户权限中心Release后，此功能代码会有一定变更)
* [功能]新增SqlBuilder用于快速构建SQL语句
* [移除]由于 Spring Cloud Thrift RPC 测试不够充分，此版本中暂时移除

==== Improvement

* [功能]支持rabbit confirm(单条)模式

  ((RabbitClusterMQ)Dew.cluster.mq).publish(String topic, String message, boolean confirm)
  ((RabbitClusterMQ)Dew.cluster.mq).request(String address, String message, boolean confirm)

* [功能]支持 `EnabledColumn` 结果反转，EnabledColumn用于标识是否启用状态的注解，默认是true是否用，false是禁用，但有些情况下状态字段会使用`del_flag`表示是否删除，这时需要设置结果反转
* [功能]统一Body及Url Path/Query的异常捕获
* [功能] `tryLock` 支持重入
* [测试]引入 `embedded redis` 以支持单元测试