@@ -10,8 +10,8 @@ import java.time.format.DateTimeFormatter;
 public class StringToLocalDateConverter implements Converter<String, LocalDate> {
 
     @Override
-    public LocalDate convert(String s) {
-        return LocalDate.parse(s, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+    public LocalDate convert(String str) {
+        return LocalDate.parse(str, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
     }
 
 }
